fix: gap in flexbox

--- a/app/less/label.less
+++ b/app/less/label.less
@@ -1,13 +1,11 @@
 label {
-	margin-right: 1rem;
-	padding-bottom: 0.5rem;
 	div {
 		color:#bfa98e;
 		transition: color 0.4s;
 	
 		font-size: 0.9rem;
-		margin-bottom: 2px;
-		margin-left: 0.3rem;
+		margin-bottom: 1px;
+		
 	}
 	&:hover,
 	&:focus {
